--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         :root {
-            --neon-text-color: #f40;
+            --neon-text-color: #ff2d95;
             --neon-border-color: #08f;
             --health-color: #0f0;
         }
